// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<ds-error-summary
  tabindex="-1"
  aria-labelledby="<removed>"
>
  <h2 id="<removed>">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Fødselsdato kan ikke være etter år 2005
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        E-post må være gyldig
      </a>
    </li>
  </ul>
</ds-error-summary>
`;

exports[`Show Hide 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Skjul feilmelding
</button>
<ds-error-summary
  tabindex="-1"
  aria-labelledby="<removed>"
>
  <h2 id="<removed>">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</ds-error-summary>
`;

exports[`With Form 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fornavn
  </label>
  <div>
    <input
      aria-invalid="true"
      id="<removed>"
      type="text"
      aria-describedby="<removed>"
    >
  </div>
  <p
    data-field="validation"
    id="<removed>"
  >
    Fornavn må være minst 2 tegn
  </p>
</ds-field>
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Telefon
  </label>
  <div>
    <input
      aria-invalid="true"
      id="<removed>"
      type="tel"
      aria-describedby="<removed>"
    >
  </div>
  <p
    data-field="validation"
    id="<removed>"
  >
    Telefonnummer kan kun inneholde siffer
  </p>
</ds-field>
<ds-error-summary
  tabindex="-1"
  aria-labelledby="<removed>"
>
  <h2 id="<removed>">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</ds-error-summary>
`;
